# Dockpit

./: .gitignore  .ultimo_contenedor_seleccionado_v2  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  GHOST_CHARACTERS_FIX.md  LICENSE  OPTIMIZATIONS.md  README.es.md  README.md  VERIFICATION.md  VERSION_AND_FEATURES.md  VISUAL_FIXES.md  VISUAL_RESIDUES_FIX.md  build-cross-platform.sh  docker-compose.yml  install-local.sh  install-universal.sh  install.sh  release.sh  run-docker-manager.sh  run-docker.sh  test-docker-manager.sh  test-dockpit.sh  test-optimizations.sh  test-visual-fixes.sh  test-visual-residues-fix.sh
docs/assets/tapes/: filter.tape  logs-levels.tape  menus.tape  overview.tape  search.tape  stats.tape
docs/dev-notes/: GHOST_CHARACTERS_FIX.md  MENU_BACKGROUNDS_FIX.md  OPTIMIZATIONS.md  README.md  VERIFICATION.md  VERSION_AND_FEATURES.md  VISUAL_FIXES.md  VISUAL_RESIDUES_FIX.md
src/: main.rs
src/app/: effects.rs  message.rs  mod.rs  state.rs  update.rs
src/config/: mod.rs
src/data/: log_buffer.rs  mod.rs
src/docker/: mod.rs
src/ui/: app.rs  components.rs  input.rs  layout.rs  mod.rs  view.rs
src/utils/: clipboard.rs  mod.rs  osc52.rs
